# opencv_example_contour_touches_image_border

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
